2006-11-07 [paul]	1.0.3cvs1

	* ChangeLog
	* INSTALL
	* configure.ac
	* debian/README.Debian
	* debian/changelog
	* debian/control
	* debian/copyright
	* debian/files
	* debian/rules
	* src/Makefile.am
	* src/att_remover.c
		Name change

2006-09-25 [paul]	1.0.3

	1.0.3 released

2006-09-22 [ticho]	1.0.2cvs4

	* configure.ac
		Update required claws-mail version to 2.4.0.200.

2006-09-01 [wwp]	1.0.2cvs3

	* commitHelper
		sync w/ commitHelper in claws-mail module:
		use CVSEDITOR env. var. if set.

2006-08-27 [colin]	1.0.2cvs2

	* src/att_remover.c
		Implement plugin_provides()

2006-08-18 [paul]	1.0.2cvs1

	* configure.ac
		bump up GLib and GTK+ minimum required versions,
		following Claws

2006-06-12 [paul]	1.0.2

	1.0.2 released

2006-06-06 [wwp]	1.0.1cvs2

	* configure.ac
	* src/Makefile.am
	* src/att_remover.c
	* src/plugin_version.h.in
	* src/.cvsignore
		fix/unify/simplify autostuff, get rid of src/plugin_version.h{,.in} (use pluginconfig.h instead).

2006-06-03 [wwp]	1.0.1cvs1

	* commitHelper
	* PATCHSETS
		introducing commitHelper for plugins too.

2006-04-07 [colin] 	1.0.1

	* configure.ac
		Optionnaly handle --prefix.
		Patch by Pawel Pekala.

2006-03-20 [colin]	1.0

	* Fix cache issue

2006-02-12 [colin]	0.5

	* Check for mainwin before using it

2005-12-15 [paul]	0.4

	* Add plugin_version()

2005-12-07 [colin]      0.3

	* Add plugin_licence()
	
2005-11-21 [colin]	0.2

	Fix warnings

2005-11-21 [colin]	0.1

	0.1 released